custom observable working (?)